# eurobasket_predictor

./: .gitignore  README.md  base_script.ipynb  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  Matches.xlsx.dvc  Teams Ranking Classes.xlsx.dvc  matches_predictions_round_1.xlsx.dvc  matches_predictions_round_2_29.xlsx.dvc  team_performance_stats.xlsx.dvc  team_performance_stats_smoothed.xlsx.dvc
