[project]
name = "eurobasket-predictor"
version = "0.1.0"
description = "'Tool that helps in predicting which team will win in a match and by how many points. Estimation is based on previous games'"
authors = [
    {name = "CarlosIvan",email = "carlosivanmn9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "dvc (>=3.62.0,<4.0.0)",
    "pydrive2 (>=1.21.3,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
